WSL containers lesson 4: C# minimal API and Spring Boot WebFlux images
Replace the Django example with two equivalent apps (ASP.NET Core 10,
Spring Boot 4.1 on Java 25), multi-stage Containerfiles running as
non-root, real wslc outputs, new exercises, and a CI job that builds
and smoke-tests both images with Docker.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_017ESejwjK4xLithvxDsyHCG